src/pages/ProjectPage/TaskList/TaskList.scss
@import '../../../styles/variables';

.notFound {
  text-align: center;
  margin-top: 2rem;
}
.search {
  margin-bottom: 1rem;

  > div {
    @include phone {
      margin-bottom: 1rem;
    }
  }
}

.withPriority {
  justify-content: space-between;
  display: flex;
  flex-flow: row nowrap;
  text-align: right;
}
.priorityFilter {
  margin-right: 16px;
  color: silver;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  text-align: center;
}

.clearFilters {
  text-align: right;

  @include phone {
    text-align: left;
  }
}

